Add clear chemical editor functions

--- a/ketcher/ketcher.html
+++ b/ketcher/ketcher.html
@@ -41,6 +41,9 @@
             break;
           case "exportMolfile":
             sendMolfile()
+            break;
+          case "clearMolfile":
+            ketcher.editor.struct(null)
         }
       },
       false
