--- a/marvin/editorws.html
+++ b/marvin/editorws.html
@@ -37,6 +37,9 @@
                     "*"
                   )
                 );
+              break;
+            case "clearMrvfile":
+              marvin.sketcherInstance.clear()
           }
         },
         false
