Add a mounted load of mrvfile.  Handle undefined marvin instance errors

--- a/marvin/editorws.html
+++ b/marvin/editorws.html
@@ -51,14 +51,15 @@
         }
       }
       function exportStructure() {
-        marvin.sketcherInstance
-        .exportStructure("mrv")
-        .then(val =>
-          window.parent.postMessage(
-            { type: "returnMrvfile", mrvfile: val },
-            "*"
-          )
-        );
+        if (marvin)
+          marvin.sketcherInstance
+          .exportStructure("mrv")
+          .then(val =>
+            window.parent.postMessage(
+              { type: "returnMrvfile", mrvfile: val },
+              "*"
+            )
+          );
       }
     </script>
   </head>
