58 Ill-Defined Substance Saving (#83)
* Add autoupdating mrvfile to marvin and rename compound attributes

* Lint

* Add save actions

* Add tests

* remove only from cypress and lint

* remove commented elements on marvin component

* Add a mounted load of mrvfile.  Handle undefined marvin instance errors

* lint

* Resolve infinite loop between marvin and MarvinWindow

* Add basic button disabling for marvin

* Simplified some redundant code

* Fix jest tests

* Fix cypress test failing due to clicks before emit finishes

* Override test posting/patching and Lint

--- a/marvin/editorws.html
+++ b/marvin/editorws.html
@@ -29,14 +29,7 @@
               );
               break;
             case "exportMrvfile":
-              marvin.sketcherInstance
-                .exportStructure("mrv")
-                .then(val =>
-                  window.parent.postMessage(
-                    { type: "returnMrvfile", mrvfile: val },
-                    "*"
-                  )
-                );
+              exportStructure()
               break;
             case "clearMrvfile":
               marvin.sketcherInstance.clear()
@@ -49,12 +42,24 @@
         if (marvin.Sketch.isSupported()) {
           marvin.sketcherInstance = new marvin.Sketch("sketch");
           marvin.sketcherInstance.setServices(getDefaultServices());
+          marvin.sketcherInstance.on('molchange', () => exportStructure())
           parent.postMessage("marvinLoaded", "*");
         } else {
           alert(
             "Cannot initiate sketcher. Current browser may not support HTML canvas or may run in Compatibility Mode."
           );
         }
+      }
+      function exportStructure() {
+        if (marvin)
+          marvin.sketcherInstance
+          .exportStructure("mrv")
+          .then(val =>
+            window.parent.postMessage(
+              { type: "returnMrvfile", mrvfile: val },
+              "*"
+            )
+          );
       }
     </script>
   </head>
